fixed alignemnt of "try another source" dropdown

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -168,6 +168,10 @@ blockquote{
   width: 800px;
 }
 
+.connections{
+  margin-top: -2px;
+}
+
 .well-sm {
     padding: 0px!important;
     border-radius: 1px!important;
